# focus

./: .ccls  .clang-format  .gitignore  CMakeLists.txt  TODO.txt  build.sh  compile_commands.json
examples/: CMakeLists.txt  main.cpp
examples/common/: common.cpp  common.hpp
examples/instancing/: instancing.cpp  instancing.hpp
examples/lines/: Lines.cpp  Lines.hpp
examples/shaders/: compile.bat
examples/shaders/dx11/: FlatVS.hlsl  testCS.hlsl
examples/shaders/gl/: UniformColor.vert  UniformColorInstanced.vert  UniformColorInterleaved.vert
examples/simple-compute/: simple_compute.cpp  simple_compute.hpp
examples/triangle/: triangle.cpp  triangle.hpp
include/: vk_dispatch_table_helper.h  vk_enum_string_helper.h  vk_extension_helper.h  vk_format_utils.cpp  vk_format_utils.h  vk_layer_config.cpp  vk_layer_config.h  vk_layer_data.h  vk_layer_dispatch_table.h  vk_layer_logging.h  vk_layer_utils.cpp  vk_layer_utils.h  vk_object_types.h  vk_safe_struct.cpp  vk_safe_struct.h  vk_typemap_helper.h  vk_validation_error_messages.h
include/SDL2/: SDL_audio.h  SDL_error.h  SDL_hints.h  SDL_render.h
include/fmt/: color.h  core.h  format.h  locale.h  os.h
include/gl/: glcorearb.h  glext.h  glxext.h  wgl.h
include/glslang/MachineIndependent/: Versions.h  localintermediate.h  parseVersions.h
include/glslang/Public/: ShaderLang.h
include/spirv-tools/: instrument.hpp  libspirv.h  optimizer.hpp
include/spirv_cross/: spirv_cfg.hpp  spirv_common.hpp  spirv_cpp.hpp  spirv_cross.hpp  spirv_cross_c.h  spirv_cross_containers.hpp  spirv_cross_error_handling.hpp  spirv_cross_parsed_ir.hpp  spirv_cross_util.hpp  spirv_glsl.hpp  spirv_hlsl.hpp  spirv_msl.hpp  spirv_parser.hpp  spirv_reflect.hpp
shaders/: compile.bat  triangle.frag  triangle.vert
shaders/dx11/: FlatVS.hlsl  UniformColorPS.hlsl  UniformColorVS.hlsl
shaders/gl/: UniformColor.frag  UniformColor.vert  UniformColorInstanced.vert  UniformColorInterleaved.frag  test.comp
src/: TriangleApp.cpp  TriangleApp.h  common.h  main.cpp  vkCore.cpp  vkCore.hpp
src/Interface/: focus.hpp
src/dx11/: BufferManager.h  ShaderBufferManager.hpp  Types.hpp
src/gl/: GLDevice.cpp  GLDevice.hpp  ShaderManager.cpp  ShaderManager.hpp  State.hpp  Types.hpp  glad.c  glad.h
src/renderer/Interface/: Context.cpp  Context.hpp  FocusBackend.cpp  FocusBackend.hpp  Handles.hpp  IBuffer.hpp  IShader.hpp  RenderState.hpp  Types.hpp  Window.hpp  focus.cpp  focus.hpp
src/renderer/dx11/: BufferManager.h  Context.cpp  Context.hpp  DX11Context.cpp  DX11Context.hpp  DX11Implementation.hpp  Shader.hpp  ShaderBufferManager.hpp  ShaderManager.cpp  ShaderManager.hpp  Types.hpp  Utils.hpp
src/renderer/dx12/: DX12Context.cpp  DX12Context.hpp
src/renderer/gl/: Buffer.cpp  Buffer.hpp  BufferManager.cpp  BufferManager.hpp  Context.cpp  Context.hpp  GLContext.cpp  GLContext.hpp  GLDevice.cpp  GLDevice.hpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  State.hpp  Types.hpp  Utils.cpp  Utils.hpp  glad.c  glad.h
src/renderer/vk/: TriangleApp.cpp  TriangleApp.h  shader.hpp  stb_image.h  vkCore.cpp  vkCore.hpp
src/utils/: FileUtils.hpp
src/vk/: TriangleApp.cpp  TriangleApp.h  shader.hpp  stb_image.h  vkCore.cpp  vkCore.hpp
test_projects/gltf_impl/: CMakeLists.txt
test_projects/gltf_impl/src/: main.cpp
